--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,5 @@
 body{
-	font-family: "Open Sans";
+	font-family: 'Open Sans', sans-serif;
 
 
 	background: linear-gradient(180deg, #abe8ffa1, #0091ff);
@@ -18,6 +18,22 @@ main{
 	display: flex;
 	height: calc(100% - 60px - 20px);
 }
+.error_window{
+	text-align: center;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	border: solid;
+	border-color: red;
+	border-radius: 5px;
+	background: white;
+	position: absolute;
+	height: 60px;
+	width: 600px;
+	left: calc(50% - 300px);
+	top:40px;
+	opacity: 0;
+}
 
 
 .header-logo{
@@ -25,6 +41,7 @@ main{
 	justify-content: center;
 	align-items: center;
 	min-width: 250px;
+	font-weight: 600;
 }
 .header-text{
 	display: flex;
@@ -47,7 +64,7 @@ main{
 
 }
 .menu-navbutton{
-	margin-top: 10px;
+	margin-bottom: 10px;
 	font-size: 18px;
 	justify-content: center;
 	align-items: center;
@@ -70,6 +87,7 @@ main{
 
 
 .canvas{
+	padding: 15px 15px 0px;
 	flex-grow: 1;
 	background: #fff;
 	border-radius: 10px;
@@ -79,7 +97,7 @@ main{
 }
 .canvas-up_menu{
 	display: flex;
-	height: 40px;
+	height: 60px;
 }
 
 .canvas-up_menu-date{
@@ -89,15 +107,15 @@ main{
 	align-items: center;
 }
 #date{
+	margin-right: 15px;
 	padding: 0 10px;
 	font-size: 16px;
 	border-color: black;
 	border: solid;
 	border-width: 1px;
-	border-radius: 10px;
-	height: 70%;
+	border-radius: 4px;
+	height: 40px;
 	width: 100%;
-	margin-left: 15px;
 }
 .canvas-up_menu-group{
 	width: 40%;
@@ -111,18 +129,59 @@ main{
 	border-radius: 10px;
 	height: 70%;
 	width: 100%;
-	margin: 0 15px;
+
 }
 
 .canvas-table{
-	margin: 0 15px;
+
 }
 #table_list{
+	border-radius: 4px !important;
+	text-align: center;
+	font-size: 18px;
 	width: 100%;
 	border-collapse: collapse;
-	border: solid;
-	border-width: 1px;
+	
 }
-#table_list tr td{
+#table_list tr{
+	border: solid;
+	border-width: 1px !important;
+	border: solid;
+	height: 60px;
+}
+#table_list-names{
+	background-color: #6767674a !important;
+	font-weight: 500;
+	font-size: 28px;
+}
+
+
+
+
+
+.canvas-under_menu{
 	margin-top: 10px;
+	justify-content: end;
+	display: flex;
+	height: 40px;
+}
+
+.canvas-under_menu-button{
+	margin-left: 20px;
+	border-width: 2px;
+	border: solid;
+	
+	border-radius: 5px;
+	height: 100%;
+	font-size: 18px;
+	font-weight: 500px;
+}
+.save{
+	width: 120px;
+	border-color: #0091ff;
+}
+
+.canvas-under_menu-button:hover{
+	cursor: pointer;
+	transform: scale(1.1);
 }
