--- a/styles/main.css
+++ b/styles/main.css
@@ -15,6 +15,23 @@
 	opacity: 0;
 }
 
+.save_window{
+	text-align: center;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	border: solid;
+	border-color: #00FF00;
+	border-radius: 5px;
+	background: white;
+	position: absolute;
+	height: 60px;
+	width: 600px;
+	left: calc(50% - 300px);
+	top:40px;
+	opacity: 0;
+}
+
 .canvas-up_menu{
 	display: flex;
 	height: 60px;
@@ -29,7 +46,7 @@
 #date{
 	margin-right: 15px;
 	padding: 0 10px;
-	font-size: 16px;
+	font-size: 18px;
 	border-color: black;
 	border: solid;
 	border-width: 1px;
