--- a/styles/style.css
+++ b/styles/style.css
@@ -1,10 +1,82 @@
 body{
 	margin: 0;
+	font-family: 'Open Sans', sans-serif;
+}
+h1{
+	text-align: center;
+	font-size: 38px;
+}
+h2{
+	text-align: center;
+	margin-bottom: 0px;
+	margin-top: 40px;
+}
+h3{
+	text-align: center;
+}
+main{
+	margin: 0 400px;
+}
+
+a{
+	text-decoration: none;
+	color: black;
 }
 .group_table{
 	display: grid;
 	grid-template-columns: repeat(4, 1fr);
 }
 .group_table-unit{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+
+
+	margin: 15px;
+	font-size: 24px;
+	height: 35px;
+
+	border: 3px blue solid;
+	border-radius: 10px;
 	
 }
+.group_table-unit:hover{
+	cursor: pointer;
+}
+
+
+/*------*/
+.table{
+	font-size: 20px;
+
+	border: 3px blue solid;
+	border-radius: 10px;
+}
+.table-list{
+	display: grid;
+	grid-template-columns: 1fr repeat(2, 5fr) 3fr;
+
+	margin: 10px 0;
+	color: #333333;
+	font-weight: 500;
+
+	text-align: center;
+	
+}
+
+.table-list-title{
+	font-weight: 600;
+	margin-bottom: 10px;
+
+}
+.table-list-num,.table-list-lesson,.table-list-teacher,.table-list-class{
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+.not_found{
+	text-align: center;
+	font-size: 24px;
+	padding: 15px 0;
+}
+
