--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,8 @@
+:root{
+	--border-color:#3399FF;
+	--inside-border-color:#99CCFF;
+x
+}
 body{
 	margin: 0;
 	font-family: 'Open Sans', sans-serif;
@@ -49,12 +54,13 @@ a{
 .table{
 	font-size: 20px;
 
-	border: 3px blue solid;
+	border: 3px var(--border-color) solid;
 	border-radius: 10px;
+	padding: 20px 0;
 }
 .table-list{
 	display: grid;
-	grid-template-columns: 1fr repeat(2, 5fr) 3fr;
+	grid-template-columns: 1fr 12fr;
 
 	margin: 10px 0;
 	color: #333333;
@@ -64,11 +70,17 @@ a{
 	
 }
 
+.table-list-info{
+	display: grid;
+	grid-template-columns: 5fr 5fr 3fr;
+}
+
 .table-list-title{
 	font-weight: 600;
 	margin-bottom: 10px;
 
 }
+
 .table-list-num,.table-list-lesson,.table-list-teacher,.table-list-class{
 	display: flex;
 	align-items: center;
