--- a/styles/adaptive.css
+++ b/styles/adaptive.css
@@ -15,6 +15,13 @@
 	main{
 		margin: 0 50px;
 	}
+	.group_table{
+		grid-template-columns: 1fr 1fr;
+	}
+	.group_table-unit{
+		height: 5vh;
+		font-size: 36px;
+	}
 }
 
 @media only screen and (max-width: 720px) {
@@ -45,10 +52,13 @@
 	.table-list-num,.table-list-lesson,.table-list-teacher,.table-list-class{
 	padding: 5px 0;
 	
+	}
+	/*----*/
+
 }
 
 @media only screen and (max-width: 480px) {
-	
+
 }
 
 @media only screen and (max-width: 320px) {
