--- a/styles/adaptive.css
+++ b/styles/adaptive.css
@@ -19,7 +19,7 @@
 		grid-template-columns: 1fr 1fr;
 	}
 	.group_table-unit{
-		height: 5vh;
+		height: 70px;
 		font-size: 36px;
 	}
 }
@@ -29,21 +29,22 @@
 		margin: 0;
 	}
 	.table{
+		margin: 0 5px;
 		padding: 0;
 		border: none;
-		border-radius: 0;
-		border-top: 3px var(--border-color) solid;
-		border-bottom: 3px var(--border-color) solid;
+		border-radius: 10px;
+		border: 3px var(--border-color) solid;
 	}
 	.table-list-title,._title{
 		display: none;
 	}
 	.table-list{
-		margin: 0;
+		margin: 10px 10px;
 		border-collapse: collapse;
 		grid-template-columns: 1fr 8fr;
-		border-top: 1px var(--inside-border-color) solid;
-		border-bottom: 1px var(--inside-border-color) solid;
+		border: 1px var(--border-color) solid;
+		border-radius: 5px;
+
 	}
 	.table-list-info{
 		grid-template-columns: 1fr;
