--- a/styles/style.css
+++ b/styles/style.css
@@ -1,20 +1,22 @@
 :root{
-	--border-color:#3399FF;
-	--inside-border-color:#99CCFF;
-x
+	--main-color:#3399FF;
 }
 body{
+	background:#FFFAFA;
 	margin: 0;
 	font-family: 'Open Sans', sans-serif;
 }
 h1{
+
 	text-align: center;
 	font-size: 38px;
 }
 h2{
+	color: white;
 	text-align: center;
-	margin-bottom: 0px;
-	margin-top: 40px;
+	margin: 0;
+	padding: 5px 0 5px 0;
+	background: var(--main-color);
 }
 .header_title{
 	font-size: 48px;
@@ -23,7 +25,8 @@ h3{
 	text-align: center;
 }
 main{
-	margin: 0 400px;
+	margin: 0 500px;
+	padding-bottom: 100px;
 }
 
 a{
@@ -41,36 +44,46 @@ a{
 
 
 	margin: 15px;
-	font-size: 24px;
-	height: 35px;
+	font-size: 28px;
+	font-weight: 500;
+	height: 50px;
 
 	border: 3px blue solid;
 	border-radius: 10px;
+
 	
 }
 .group_table-unit:hover{
 	cursor: pointer;
+	transform: scale(1.1);
+	transition: .2s;
 }
 
 
 /*------*/
+.big_table{
+	margin-bottom: 40px;
+	
+}
 .table{
+	
 	font-size: 20px;
 
-	border: 3px var(--border-color) solid;
-	border-radius: 10px;
-	padding: 20px 0;
+	padding-bottom: 10px;
 }
 .table-list{
+	background: white;
 	display: grid;
 	grid-template-columns: 1fr 12fr;
 
-	margin: 10px 0;
+	padding: 10px 0;
 	color: #333333;
 	font-weight: 500;
 
 	text-align: center;
-	
+}
+.table-list:nth-child(odd){
+	background: #ece9e9;
 }
 
 .table-list-info{
@@ -91,7 +104,7 @@ a{
 }
 .not_found{
 	text-align: center;
-	font-size: 24px;
+	font-size: 1.5rem;
 	padding: 15px 0;
 }
 
