--- a/styles/style.css
+++ b/styles/style.css
@@ -2,7 +2,7 @@
 	--main-color:#3399FF;
 }
 body{
-	background:#FFFAFA;
+	background:#f3f3f3;
 	margin: 0;
 	font-family: 'Open Sans', sans-serif;
 }
@@ -103,8 +103,9 @@ a{
 	justify-content: center;
 }
 .not_found{
+	background: white;
 	text-align: center;
 	font-size: 1.5rem;
-	padding: 15px 0;
+	padding: 10px 0;
 }
 
