--- a/admin/styles/style.css
+++ b/admin/styles/style.css
@@ -89,13 +89,8 @@ a{
 
 
 
-
-
-
-
-
 .canvas{
-	padding: 15px 15px 0px;
+	padding: 15px;
 	flex-grow: 1;
 	background: #fff;
 	border-radius: 10px;
@@ -105,3 +100,5 @@ a{
 	margin-right: 20px;
 
 }
+
+
