--- a/styles/style.css
+++ b/styles/style.css
@@ -8,7 +8,7 @@ body{
 	margin: 0;
 	font-family: 'Open Sans', sans-serif;
 }
-h1{
+h1{	
 	color: var(--main-color);
 	text-align: center;
 	font-size: 38px;
@@ -22,6 +22,7 @@ h2{
 }
 .header_title{
 	font-size: 48px;
+	margin-top: 80px;
 }
 h3{
 	text-align: center;
@@ -37,7 +38,7 @@ a{
 }
 .group_table{
 	display: grid;
-	grid-template-columns: repeat(4, 1fr);
+	grid-template-columns: repeat(3, 1fr);
 }
 .group_table-unit{
 	background: var(--bg-color);
@@ -45,7 +46,7 @@ a{
 	justify-content: center;
 	align-items: center;
 
-
+	min-width: 180px;
 	margin: 15px;
 	font-size: 28px;
 	font-weight: 500;
@@ -75,9 +76,9 @@ a{
 	padding-bottom: 10px;
 }
 .table-list{
-	background: white;
+	background: #ece9e9;
 	display: grid;
-	grid-template-columns: 1fr 12fr;
+	grid-template-columns: 1fr 8fr 8fr 4fr;
 
 	padding: 10px 0;
 	color: #333333;
@@ -86,17 +87,14 @@ a{
 	text-align: center;
 }
 .table-list:nth-child(odd){
-	background: #ece9e9;
+
+	background: #d7d7d7;
 }
 
-.table-list-info{
-	display: grid;
-	grid-template-columns: 5fr 5fr 3fr;
-}
 
 .table-list-title{
+	padding: 0 5px;
 	font-weight: 600;
-	margin-bottom: 10px;
 
 }
 
@@ -106,6 +104,7 @@ a{
 	justify-content: center;
 }
 .not_found{
+	background: #ece9e9;
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -114,3 +113,39 @@ a{
 	padding: 10px 0;
 }
 
+/* Стили для главной --*/
+.main_page{
+	margin: 200px auto;
+	padding: 0;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+.timetable{
+
+	margin-bottom: 100px;
+
+	color: #5d6167; /* Цвет для таблицы с расписанием звонков */
+	font-size: 24px;
+}
+
+.timetable-row{
+	display: grid;
+	grid-template-columns: 1fr 1fr 1fr;
+	padding: 5px 0;
+
+}
+.timetable-row-title{
+	font-weight: 600;
+}
+.timetable-row-unit{
+	padding: 0 10px;
+	display: flex;
+	justify-content: center;
+
+	min-width: 180px;
+}
+.main_unit{
+	margin: auto 0;
+	padding: 0 10px;
+}
