--- a/styles/adaptive.css
+++ b/styles/adaptive.css
@@ -59,7 +59,7 @@
 
 @media only screen and (max-width: 720px) {
 	h2{
-		font-size: 24px;
+		font-size: 20px;
 	}
 	main{
 		margin: 0px;
@@ -78,6 +78,7 @@
 		margin: 0;
 	}
 	.table{
+		font-size: 14px;
 		padding: 0;
 		border: none;
 	}
@@ -85,6 +86,7 @@
 		width: 100%;
 	}
 	.table-list{
+		grid-template-columns: 1fr 6fr 8fr 4fr;
 		border-collapse: collapse;
 	}
 	.table-list-num,.table-list-lesson,.table-list-teacher,.table-list-class{
