--- a/styles/adaptive.css
+++ b/styles/adaptive.css
@@ -31,6 +31,7 @@
 
 
 @media only screen and (max-width: 1024px) {
+
 	.header_title{
 		font-size: 68px;
 	}
@@ -61,12 +62,11 @@
 	h2{
 		font-size: 20px;
 	}
+	
 	main{
-		margin: 0px;
+		margin: 100px 5px;
 	}
-	.main_page{
-		margin: 100px 0;
-	}
+	
 	.timetable{
 		max-width: 1920px;
 	}
@@ -109,4 +109,10 @@
 
 @media only screen and (max-width: 320px) {
 	
+}
+@media (hover: hover) and (pointer: fine) {
+  .group_table-unit:hover{
+	cursor: pointer;
+	transform: scale(1.1);
+	transition: .2s;
 }
