--- a/styles/style.css
+++ b/styles/style.css
@@ -148,3 +148,11 @@ a{
 	margin: auto 0;
 	padding: 0 10px;
 }
+.error{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-wrap: nowrap;
+	height: 100%;
+	font-size: 48px;
+}
