Создание вкладки статистика

--- a/admin/components/nav.html
+++ b/admin/components/nav.html
@@ -3,3 +3,4 @@
 	<a href="teachers.php" class="menu-navbutton">Преподаватели</a>
 	<a href="cabinets.php" class="menu-navbutton">Аудитории</a>
 	<a href="groups.php" class="menu-navbutton">Группы</a>
+	<a href="stats.php" class="menu-navbutton">Статистика</a>
