--- a/admin/styles/crud.css
+++ b/admin/styles/crud.css
@@ -8,8 +8,13 @@ h2{
 .canvas-block{
 	justify-content: center;
 	display: flex;
-	margin-bottom: 20px;
+	margin-bottom: 80px;
 	flex-wrap: wrap-reverse;
+}
+
+.canvas-stats_block{
+	flex-direction: column;
+	padding:20px 50px;
 }
 
 .canvas-block-units-lessons_title{
