--- a/styles/style.css
+++ b/styles/style.css
@@ -21,7 +21,6 @@ h2{
 	background: var(--main-color);
 }
 .header_title{
-	font-size: 48px;
 	margin-top: 80px;
 }
 h3{
@@ -147,5 +146,25 @@ a{
 .main_unit{
 	margin: auto 0;
 	padding: 0 10px;
+}
+
+header{
+	display:flex;
+	flex-direction: column;
+}
+
+/* Стили для шапки index.php */
+
+.logo-title{
+	margin-top: 20px;
+	display:flex;
+	justify-content:center;
+	align-items: center;
+	flex-wrap: wrap;
+}
+
+.logo{
+	height:100px;
+	margin-right: 50px;
 }
 
