Добавлен вывод распиания на неделю

--- a/admin/components/nav.html
+++ b/admin/components/nav.html
@@ -1,4 +1,5 @@
 	<a href="/admin" class="menu-navbutton">Расписание</a>
+	<a href="table.php" class="menu-navbutton">Таблица</a>
 	<a href="lessons.php" class="menu-navbutton">Дисциплины</a>
 	<a href="teachers.php" class="menu-navbutton">Преподаватели</a>
 	<a href="cabinets.php" class="menu-navbutton">Аудитории</a>
